Don't recreate QOpenGLContext when the application is sharing contexts

Task-number: QTBUG-63304
Change-Id: Idfefb246a15166e04c0db0c894a705a7be2ecf67
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>